--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -5,7 +5,7 @@
   justify-content: center;
   align-content: center;
   align-items: center;
-  height: 500px;
+  height: 400px;
   width: 500px;
 
   margin-left: auto;
@@ -20,8 +20,6 @@
   flex-direction: row;
   justify-content: flex-end;
   min-width: 400px;
-  min-height: 50px;
-  border: 2px solid #BDBDBD;
   margin: 2px;
 }
 
@@ -35,6 +33,22 @@
   min-height: 50px;
   border: 2px solid #BDBDBD;
   margin: 2px;
+  margin-bottom: 20px;
+}
+
+/* .answer
+{
+  width: 50%;
+}
+
+.question
+{
+  width: 50%;
+} */
+
+.entry
+{
+  display: inline-block;
 }
 
 .input-container
